force-app/main/default/objects/Title_Rate_Sheet__c/Title_Rate_Sheet__c.object-meta.xml
<CustomObject>
    <description>Used by FVA Litigation Time Tracking (Dispute Resolution Consulting)</description>
    <label>Title Rate Sheet</label>
    <nameField>
        <label>Title Rate Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Title Rate Sheets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>