force-app/main/default/objects/Title_Rate_Sheet__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates the Rate Sheet is Active (Selectable)</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>