force-app/main/default/objects/Title_Rate_Sheet__c/fields/Associate_Rate__c.field-meta.xml
<CustomField>
    <fullName>Associate_Rate__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Associate Rate</description>
    <label>Associate Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>