force-app/main/default/objects/Title_Rate_Sheet__c/fields/Director_Rate__c.field-meta.xml
<CustomField>
    <fullName>Director_Rate__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Director Rate</description>
    <label>Director Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>