force-app/main/default/objects/Title_Rate_Sheet__c/fields/Executive_Administrator_Rate__c.field-meta.xml
<CustomField>
    <fullName>Executive_Administrator_Rate__c</fullName>
    <label>Executive Administrator Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>