force-app/main/default/objects/Title_Rate_Sheet__c/fields/Financial_Analyst_Rate__c.field-meta.xml
<CustomField>
    <fullName>Financial_Analyst_Rate__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>Financial Analyst Rate</description>
    <label>Financial Analyst Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>