force-app/main/default/objects/Title_Rate_Sheet__c/fields/InternFinancialAnalyst1__c.field-meta.xml
<CustomField>
    <fullName>InternFinancialAnalyst1__c</fullName>
    <label>Intern/Financial Analyst 1</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>