force-app/main/default/objects/Title_Rate_Sheet__c/fields/Manager_Rate__c.field-meta.xml
<CustomField>
    <fullName>Manager_Rate__c</fullName>
    <label>Manager Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>