force-app/main/default/objects/Title_Rate_Sheet__c/fields/Outsourced_Contractor_Rate__c.field-meta.xml
<CustomField>
    <fullName>Outsourced_Contractor_Rate__c</fullName>
    <label>Outsourced Contractor Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>