force-app/main/default/objects/Title_Rate_Sheet__c/fields/Para_Professional_Rate__c.field-meta.xml
<CustomField>
    <fullName>Para_Professional_Rate__c</fullName>
    <label>Para-Professional Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>