force-app/main/default/objects/Title_Rate_Sheet__c/fields/PresentationsGraphicsRate__c.field-meta.xml
<CustomField>
    <fullName>PresentationsGraphicsRate__c</fullName>
    <defaultValue>175.00</defaultValue>
    <description>This field has been added to cover for the Contact Title that contains &quot;P&amp;G&quot;.</description>
    <label>Presentations &amp; Graphics Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>