force-app/main/default/objects/Title_Rate_Sheet__c/fields/SpecialProjectsCoordinator__c.field-meta.xml
<CustomField>
    <fullName>SpecialProjectsCoordinator__c</fullName>
    <label>Special Projects Coordinator</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>