force-app/main/default/objects/Title_Rate_Sheet__c/fields/SrResearchLibrarianRate__c.field-meta.xml
<CustomField>
    <fullName>SrResearchLibrarianRate__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Sr. Research Librarian Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>