force-app/main/default/objects/Title_Rate_Sheet__c/fields/Vice_President_Rate__c.field-meta.xml
<CustomField>
    <fullName>Vice_President_Rate__c</fullName>
    <defaultValue>0.0</defaultValue>
    <description>VP Rate</description>
    <label>Vice President Rate</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>