force-app/main/default/objects/Title_Rate_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Outsourced_Contractor_Rate__c</columns>
    <columns>Para_Professional_Rate__c</columns>
    <columns>SpecialProjectsCoordinator__c</columns>
    <columns>Senior_Managing_Director_Rate__c</columns>
    <columns>Managing_Director_Rate__c</columns>
    <columns>Director_Rate__c</columns>
    <columns>Senior_Vice_President_Rate__c</columns>
    <columns>Vice_President_Rate__c</columns>
    <columns>Associate_Rate__c</columns>
    <columns>Financial_Analyst_Rate__c</columns>
    <columns>Executive_Administrator_Rate__c</columns>
    <columns>Manager_Rate__c</columns>
    <columns>SrResearchLibrarianRate__c</columns>
    <columns>PresentationsGraphicsRate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>